--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -1,8 +1,15 @@
 .container
 	.row
-		.col-md-6
+		.col-md-4
 			h3(style="margin-top:15px;") #{title}
-		.col-md-6
+		if title=="首页"
+			.col-md-4
+				form#form-search(action="/search",method="post",onSubmit="return false")
+					.input-group(style="padding-top:10px")
+						input.form-control(type="text",onkeydown="onKeyDown(this)",name="query",placeholder="输入关键字并回车！")
+						span.input-group-addon
+							i.glyphicon.glyphicon-search
+		.col-md-4.pull-right
 			if user
 				h5.text-right(style="margin-top: 10px")
 					span 欢迎您，
@@ -62,3 +69,18 @@
 				.modal-footer
 					button.btn.btn-default(type="button",data-dismiss="modal") close
 					button.btn.btn-success(type="submit") submit
+	script.
+		function onKeyDown(ele){
+			var e = event || window.event  
+			var $val = $(ele).val();			
+			if(e && e.keyCode==13){ // enter 键
+				console.info($val)
+				if($val==""||$val==null){
+					return false
+				}else{
+					console.log($val);
+					$("#form-search").attr('onSubmit','return true');
+				}
+				return false
+			}
+		}
